--- a/Başlangıç_Seviye_Frontend_Patikası/HTML/Introduction/index.html
+++ b/Başlangıç_Seviye_Frontend_Patikası/HTML/Introduction/index.html
@@ -2,5 +2,33 @@
 <h1>Talha Nebi Kumru</h1>
 <!--Subitle-->
 <h2>About</h2>
-<!--Paragraph-->
-<p>Hello, I am Talha.</p>
+<h3>Hobies</h3>
+<div>
+    <ol>
+        <li>
+            Film
+            <ul>
+                <li><span><a href="https://www.imdb.com/title/tt0120338/" target="_blank">Titanic</a></span></li>
+                <li><span>Forrest Gump</span></li>
+            </ul>
+        </li>
+        <li>
+            Series
+            <ul>
+                <li><span>HIMYM</span></li>
+                <li><span>Behzat Ç</span></li>
+            </ul>
+        </li>
+        <li>
+            Book
+            <ul>
+                <li><span>Siyasetname</span></li>
+                <li><span>Nutuk</span></li>
+            </ul>
+        </li>
+    </ol>
+</div>
+<div>
+    <img src="https://media.glamour.com/photos/603534855d7be6c90b6d5c90/master/pass/MCDTITA_FE018.jpg" alt="Kate Winslet">
+    <p>Kate Winslet</p>
+</div>
