--- a/Başlangıç_Seviye_Frontend_Patikası/CSS/Introduction/index.html
+++ b/Başlangıç_Seviye_Frontend_Patikası/CSS/Introduction/index.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+    <ul>
+        <li>Lorem ipsum dolor sit.</li>
+        <li>Mollitia atque magni sequi!</li>
+        <li>Laudantium, earum tempore. Dolor?</li>
+        <li>Repellendus vero possimus amet.</li>
+        <li>Soluta unde tenetur assumenda?</li>
+    </ul>
     <article class="text-red">
         <h1>Lorem, ipsum dolor.</h1>
         <h2>Lorem, ipsum.</h2>
