--- a/Başlangıç_Seviye_Frontend_Patikası/Javascript/Basics/index.html
+++ b/Başlangıç_Seviye_Frontend_Patikası/Javascript/Basics/index.html
@@ -6,11 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .title {
-            color: blueviolet;
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 </head>
 
 <body>
@@ -19,7 +15,33 @@
         <li><a href="">Link info</a></li>
     </ul>
 
-    <script src="js/css-class.js"></script>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <form action="userform" id="userform">
+                    <div class="mb-3">
+                        <label class="form-label" for="username">Username</label>
+                        <input class="form-control" type="text" name="username" id="username">
+                    </div>
+
+                    <div class="mb-3">
+                        <label class="form-label" for="score">Note</label>
+                        <input class="form-control" type="number" name="score" id="score">
+                    </div>
+
+                    <div class="mb-3">
+                        <button type="reset" class="btn btn-danger float-left w-25">Reset</button>
+                        <button type="submit" class="btn btn-success float-right w-50">Send</button>
+                    </div>
+                </form>
+            </div>
+            <div class="col-12 mt-4" id="userlist"></div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+    <script src="js/form.js"></script>
 </body>
 
 </html>
